--- a/pages/games/deltarune/index.html
+++ b/pages/games/deltarune/index.html
@@ -46,7 +46,7 @@
       <span class="disabled-title">--</span>
       <img src="icons/0.png">
     </a>
-    <a href="javascript:window.open('https://truffled.lol', '_blank')" class="row">
+    <a href="javascript:window.open('https://nexus-is.onthewifi.com', '_blank')" class="row">
       <span class="chapter"></span>
       <span class="title">made by bog</span>
       <span class="badge"></span>
