--- a/pages/games/zeepkist-2d/index.html
+++ b/pages/games/zeepkist-2d/index.html
@@ -5,8 +5,8 @@
 	<meta name="robots" content="noindex" />
 	<meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Zeepkist: Crash 2D </title>
-	<meta name="robots" content="noindex,nofollow" />
+	<title>Zeepkist: Crash 2D  Unblocked - ClassRoom6x</title>
+	<meta name="website" content="classroom6x.gitlab.io" />
 	<script>
 	window.config = {
 		loader: 'unity-2020',
@@ -23,18 +23,18 @@
 
 		fileSize:  11 ,
 		cachedDecompressedFileSizes: {
-			'04b61249378f375aa840949dd912ab65.js.gz':  82027 ,
-			'2f95a18a0a171ff5a3385cb0538a1477.wasm.gz':  4970387 ,
-			'73b7afb67dabaa933f2c9c747aaf8ce4.data.gz':  6725247 ,
+			'04b61249378f375aa840949dd912ab65.js':  82027 ,
+			'2f95a18a0a171ff5a3385cb0538a1477.wasm':  4970387 ,
+			'73b7afb67dabaa933f2c9c747aaf8ce4.data':  6725247 ,
 			'Build 56 Poki.loader.js':  18894 ,
 		},
-		"metadata": {"poki_template_version":1,"background_color":"#231F20","code_filename":"2f95a18a0a171ff5a3385cb0538a1477.wasm.gz","company_name":"Steelpan Interactive","data_filename":"73b7afb67dabaa933f2c9c747aaf8ce4.data.gz","development_player":"false","framework_filename":"04b61249378f375aa840949dd912ab65.js.gz","height":"600","loader_filename":"Build 56 Poki.loader.js","product_name":"Zeepkist Extreme Crash Test 1","product_version":"1.0","splash_screen_style":"Dark","unity_version":"2021.3.10f1","use_data_caching":"true","use_threads":"false","use_wasm":"true","use_webgl_1_0":"true","use_webgl_2_0":"true","width":"960"}
+		"metadata": {"poki_template_version":1,"background_color":"#231F20","code_filename":"2f95a18a0a171ff5a3385cb0538a1477.wasm","company_name":"Steelpan Interactive","data_filename":"73b7afb67dabaa933f2c9c747aaf8ce4.data","development_player":"false","framework_filename":"04b61249378f375aa840949dd912ab65.js","height":"600","loader_filename":"Build 56 Poki.loader.js","product_name":"Zeepkist Extreme Crash Test 1","product_version":"1.0","splash_screen_style":"Dark","unity_version":"2021.3.10f1","use_data_caching":"true","use_threads":"false","use_wasm":"true","use_webgl_1_0":"true","use_webgl_2_0":"true","width":"960"}
 	};
 	</script>
 <!-- will be copied to the resulting head //-->
 </head>
-<body>
-	<script src="./master-loader.js"></script>
+<body style="overflow:hidden;">
+	<script src="patch/master-loader.js"></script>
 <!-- will be copied to the resulting body //-->
 <!-- will also be copied to the resulting body //-->
 <!-- 
