--- a/pages/apps/wii-simulator/index.html
+++ b/pages/apps/wii-simulator/index.html
@@ -152,7 +152,7 @@
         <div class="bottom-bar">
             <div class="lateral left">
                 <img src="assets/left-button.png" class="left-btn" />
-                <img src="assets/wii-button.png" class="wii-btn buttonlike" onclick="playSFX('button-select-big.mp3', userConfig.sfxVol)" />
+                <img src="assets/wii-button.png" class="wii-btn buttonlike" onclick="playSFX('./audio/button-select-big.mp3', userConfig.sfxVol)" />
                 <span class="tag">Wii Settings</span>
             </div>
             <div class="info">
@@ -162,7 +162,7 @@
             </div>
             <div class="lateral right">
                 <img src="assets/right-button.png" class="right-btn" />
-                <img src="assets/mail-button.png" class="diary-btn buttonlike" onclick="playSFX('button-select-big.mp3', userConfig.sfxVol)" />
+                <img src="assets/mail-button.png" class="diary-btn buttonlike" onclick="playSFX('./audio/button-select-big.mp3', userConfig.sfxVol)" />
                 <span class="tag">Wii Message Board</span>
             </div>
         </div>
@@ -170,7 +170,7 @@
 
     <div class="msgboard">
         <div class="bg"></div>
-        <div class="card buttonlike" onclick="playSFX('letter-in.mp3', userConfig.sfxVol)">
+        <div class="card buttonlike" onclick="playSFX('./audio/letter-in.mp3', userConfig.sfxVol)">
             <img src="assets/petermiiffin-head.png" class="mii" /><br>
             <span>Hello Lois</span>
         </div>
@@ -183,13 +183,13 @@
                     <span>with multiple lines.</span>
                 </div>
             </div>
-            <a class="alt-btn back" onmouseover="playSFX('button-hover.mp3', userConfig.sfxVol)">Back</a>
+            <a class="alt-btn back" onmouseover="playSFX('./audio/button-hover.mp3', userConfig.sfxVol)">Back</a>
         </div>
         <div class="bottom">
             <span id="date2"></span>
             <div class="lateral">
                 <img src="assets/right-button.png" class="right-btn" />
-                <img src="assets/backtomenu.png" class="back-btn backtowiimenu buttonlike" onclick="playSFX('button-select-big.mp3', userConfig.sfxVol)" />
+                <img src="assets/backtomenu.png" class="back-btn backtowiimenu buttonlike" onclick="playSFX('./audio/button-select-big.mp3', userConfig.sfxVol)" />
                 <span class="tag">Wii Menu</span>
             </div>
         </div>
@@ -200,8 +200,8 @@
             <div class="tl"></div><div class="tr"></div><div class="bl"></div><div class="br"></div>
             <img id="videoSpec" src="" />
             <div class="buttons">
-                <a class="buttonlike" onmouseover="playSFX('button-hover.mp3', userConfig.sfxVol)" onclick="menuReturn()">Wii Menu</a>
-                <a class="buttonlike letsago" onmouseover="playSFX('button-hover.mp3', userConfig.sfxVol)" onclick="start()">Start</a>
+                <a class="buttonlike" onmouseover="playSFX('./audio/button-hover.mp3', userConfig.sfxVol)" onclick="menuReturn()">Wii Menu</a>
+                <a class="buttonlike letsago" onmouseover="playSFX('./audio/button-hover.mp3', userConfig.sfxVol)" onclick="start()">Start</a>
             </div>
         </div>
     </div>
@@ -212,11 +212,11 @@
                 <img src="assets/wii-logo.svg" />
             </div>
             <div class="cells">
-                <a class="info buttonlike" href="/credits" onmouseover="playSFX('button-hover.mp3', userConfig.sfxVol)" target="_blank"></a>
-                <a class="stngs buttonlike" href="/settings" onmouseover="playSFX('button-hover.mp3', userConfig.sfxVol)"></a>
+                <a class="info buttonlike" href="/credits" onmouseover="playSFX('./audio/button-hover.mp3', userConfig.sfxVol)" target="_blank"></a>
+                <a class="stngs buttonlike" href="/settings" onmouseover="playSFX('./audio/button-hover.mp3', userConfig.sfxVol)"></a>
             </div>
             <div class="bottombar">
-                <a class="alt-btn close" onmouseover="playSFX('button-hover.mp3', userConfig.sfxVol)">Back</a>
+                <a class="alt-btn close" onmouseover="playSFX('./audio/button-hover.mp3', userConfig.sfxVol)">Back</a>
             </div>
         </div>
     </div>
@@ -310,7 +310,7 @@
 
         // CHANNEL START
         function start() {
-            playSFX('button-select-big.mp3', userConfig.sfxVol);
+            playSFX('./audio/button-select-big.mp3', userConfig.sfxVol);
             
             if ($(".letsago").attr("data-start")) {
                 setTimeout(() => {document.body.classList.add("fadeOut");}, 1000);
@@ -349,13 +349,13 @@
             $(".main-menu").addClass('chsout-anim');
             setTimeout(() => {$(".main-menu").removeClass('chsout-anim');}, 1000);
 
-            playSFXMulti(0.2, ['button-select.mp3', 'channel-back.mp3']);
+            playSFXMulti(0.2, ['./audio/button-select.mp3', './audio/channel-back.mp3']);
             bgMusicToggle();
         }
 
         //PAGE PREV/NEXT
         $('.prev').on('click', function() {
-            playSFX('nextprev.mp3', userConfig.sfxVol);
+            playSFX('./audio/nextprev.mp3', userConfig.sfxVol);
             $('.grid').animate({ scrollLeft: '-=' + $('.grid').width() }, 0);
             currentMenuPage--;
             $(".next").css("display", "flex");
@@ -366,7 +366,7 @@
         });
 
         $('.next').on('click', function() {
-            playSFX('nextprev.mp3', userConfig.sfxVol);
+            playSFX('./audio/nextprev.mp3', userConfig.sfxVol);
             $('.grid').animate({ scrollLeft: '+=' + $('.grid').width() }, 0);
             currentMenuPage++;
             $(".prev").css("display", "flex");
